--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "promise-mongo"
-	,"version": "0.1.4"
+	,"version": "0.2.0"
 	,"description": "a mongodb wrapper, make everything return promise."
 	,"main": "index.js"
 	,"scripts": {
@@ -25,6 +25,7 @@
 	,"dependencies": {
 		"lodash": "*"
 		,"mongodb": "*"
+		,"promise": "*"
 	}
 	,"devDependencies": {
 		"mocha": "^2.0.0"
@@ -35,6 +36,6 @@
 	}
 	,"homepage": "https://github.com/zxdong262/promise-mongo"
 	,"engines": {
-		"node": ">= 0.11.13"
+		"node": ">= 0.10.0"
 	}
 }
