--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "promise-mongo"
-	,"version": "3.0.0"
+	,"version": "3.0.1"
 	,"description": "a mongodb wrapper, make everything return promise."
 	,"main": "index.js"
 	,"scripts": {
@@ -20,10 +20,10 @@
 		,"url": "http://html5beta.com"
 	}
 	,"dependencies": {
-		"mongodb": "*"
+		"mongodb": "2.1.7"
 	}
 	,"devDependencies": {
-		"mocha": "*"
+		"mocha": "2.4.5"
 	}
 	,"license": "MIT"
 	,"bugs": {
